update old blogs

--- a/_posts/2019-02-17-cf1113.md
+++ b/_posts/2019-02-17-cf1113.md
@@ -4,13 +4,14 @@ title:      "Codeforces Round #539 (Div. 2)"
 subtitle:   "螺旋炸裂系列orz"
 date:       2019-02-17 22:00:00
 author:     "mental2008"
-header-img: "img/post-bg-u5.jpg"
+header-style: text
+mathjax: true
 catalog: true
 tags:
     - ACM
 ---
 
-> 日常打cf状态低迷QAQ连题目都读不清楚了啊
+> 日常打 cf 状态低迷QAQ连题目都读不清楚了啊
 
 ## Codeforces Round #539 (Div. 2)
 
@@ -26,9 +27,9 @@ AC代码: [A.cpp](https://github.com/mental2008/ACM/blob/master/Codeforces%20Rou
 
 ### B
 
-题意给出一个数组，可以从中选出两个数 $a_i$ 和 $a_j$，使其变化为 $\frac{a_i}{x}$ 和 $a_j·x$，需保证 $x$ 是 $a_i$的因子，目标是使得数组和**最小**. $(2 \le n \le 5·10^4,1 \le a_i \le 100)$
+题意给出一个数组，可以从中选出两个数 $a_i$ 和 $a_j$，使其变化为 $\frac{a_i}{x}$ 和 $a_j·x$，需保证 $x$ 是 $a_i$ 的因子，目标是使得数组和**最小**. $(2 \le n \le 5·10^4,1 \le a_i \le 100)$
 
-比赛的时候sb了T^T没看到这样的操作至多做一次...如果只做一次的话就很简单了.
+比赛的时候 sb 了T^T没看到这样的操作至多做一次...如果只做一次的话就很简单了.
 
 可以想到如果要将除掉的 $x$ 乘给某个数 $a_j$，那么这个数自然是数组的**最小值**，不妨记为 $Min$.
 
