--- a/_posts/2019-06-26-whyWePhd.md
+++ b/_posts/2019-06-26-whyWePhd.md
@@ -5,7 +5,7 @@ subtitle:   "如果不以科研为追求，又出于怎样的动机或原因"
 author:     "mental2008"
 header-style: text
 mathjax: true
-catalog: true
+no-catalog: true
 tags:
     - 生活
 ---
