update img path

--- a/_posts/2019-01-19-camp.md
+++ b/_posts/2019-01-19-camp.md
@@ -8,7 +8,7 @@ mathjax: true
 no-catalog: true
 tags:
     - ACM
-    - 生活
+    - Wannafly Winter Camp
 ---
 
 来 wannafly camp 啦！
@@ -17,7 +17,7 @@ tags:
 
 中午吃了热乎乎的干锅鸭头，味道还挺不错的。晚上也点了大盘鸡的外卖，希望今后几天饭堂的饭菜也能追上今天的饭菜质量。
 
-![](https://raw.githubusercontent.com/mental2008/mental2008.github.io/master/img/post-pic-duck.jpg)
+![](../../../../img/winter-camp/post-pic-duck.jpg)
 
 
 最后希望自己在之后的几天好好努力啦！努力提高自己的算法水平！
