--- a/_posts/2019-01-24-day5.md
+++ b/_posts/2019-01-24-day5.md
@@ -8,7 +8,7 @@ mathjax: true
 catalog: true
 tags:
     - ACM
-    - 生活
+    - Wannafly Winter Camp
 ---
 
 > 小乐色姐姐太漂亮辣~
@@ -19,7 +19,7 @@ tags:
 
 下午就是做 dls 的自闭专题了
 
-![](https://raw.githubusercontent.com/mental2008/mental2008.github.io/master/img/post-pic-dls.png)
+![](/img/winter-camp/post-pic-dls.png)
 
 div1 题目难度完爆 div2...同一道题削弱前削弱后完全是两个画风啊
 
