--- a/_posts/2019-01-27-day7.md
+++ b/_posts/2019-01-27-day7.md
@@ -8,7 +8,7 @@ mathjax: true
 catalog: true
 tags:
     - ACM
-    - 生活
+    - Wannafly Winter Camp
 ---
 
 ## Day7 实录
@@ -33,4 +33,4 @@ mark 一下课件里的各个习题，目标是寒假期间把里面的题都补
 
 希望省赛/校赛的时候能看见一个不一样的自己
 
-![](https://raw.githubusercontent.com/mental2008/mental2008.github.io/master/img/post-pic-camp.jpg)
+![](/img/winter-camp/post-pic-camp.jpg)
