--- a/_posts/2019-02-01-day3I.md
+++ b/_posts/2019-02-01-day3I.md
@@ -29,7 +29,7 @@ tags:
 
 可以用带权并查集来实现这一过程
 
-![](https://raw.githubusercontent.com/mental2008/mental2008.github.io/master/img/post-pic-day3i.png)
+![](/img/winter-camp/post-pic-day3i.png)
 
 每次连边，都建一个新点，然后从 $y$ 连一条权值为 $\frac{1}{3}$ 的边，从 $x$ 连一条权值为 $\frac{2}{3}$ 的边
 
