[Paper Reading] update borg

--- a/_posts/2021-06-19-borg.md
+++ b/_posts/2021-06-19-borg.md
@@ -10,7 +10,7 @@ catalog: true
 # no-catalog: true
 tags:
     - Paper Reading
-    - Cluster Managmenet
+    - Cluster Management
 ---
 
 > 最近打算回顾一些系统领域经典的论文，整理成笔记，希望能从过去的工作中获得一些启发。
