--- a/_posts/2021-06-19-borg.md
+++ b/_posts/2021-06-19-borg.md
@@ -17,7 +17,7 @@ tags:
 
 ## 概述
 
-Borg[<sup>1</sup>](#refer-borg) 是 Google 内部使用的大规模集群管理系统，跟开源的 [Kubernetes](https://kubernetes.io/)[<sup>2</sup>](#refer-kubernetes) 一脉相承，本文发表于 [EuroSys 2015](https://eurosys2015.labri.fr/) (个人感觉是 Google 特别偏好的会议)。\\
+[Borg](#refer-borg) 是 Google 内部使用的大规模集群管理系统，跟开源的 [Kubernetes](#refer-kubernetes) 一脉相承，本文发表于 [EuroSys 2015](https://eurosys2015.labri.fr/) (个人感觉是 Google 特别偏好的会议)。\\
 \[[Paper](https://research.google/pubs/pub43438/)\]\[[Slides](https://drive.google.com/file/d/0B5g07T_gRDg9SFlIZHhoQUJCeXc/preview?resourcekey=0-6u_7P2yZI_3KDUxmrkfz1w)\]\[[Youtube Video](https://www.youtube.com/watch?v=7MwxA4Fj2l4)\]
 
 这篇博客主要会聊下 Borg 在论文中描述的系统架构，并尝试分析其中设计精妙之处。
