fix(blog): remove catalog of 2021 summary blog

--- a/_posts/2022-01-03-2021-summary.md
+++ b/_posts/2022-01-03-2021-summary.md
@@ -6,7 +6,7 @@ date: 2022-01-03 11:30:00
 author: "mental2008"
 header-style: text
 mathjax: true
-catalog: true
+no-catalog: true
 tags:
     - 年度总结
     - 生活
