--- a/_drafts/2023-09-27-zotero.md
+++ b/_drafts/2023-09-27-zotero.md
@@ -1,15 +1,16 @@
 ---
 layout: post
-title: "模版"
-subtitle: "Template"
-date: 2021-06-26
+title: "Zotero is all you need for reference management"
+subtitle: "文献管理神器"
+date: 2023-09-27
 author: "mental2008"
 # header-img: "img/post-bg-2018.jpg"
 header-style: text
 mathjax: true
 # plchart: true
 # no-catalog: true
-# hidden: true
+hidden: true
 tags:
-    - template
+    - Zotero
+    - 文献管理
 ---
