--- a/_posts/2021-06-26-elon-musk.md
+++ b/_posts/2021-06-26-elon-musk.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "硅谷钢铁侠 - 埃隆·马斯克的冒险人生"
+title: "《硅谷钢铁侠：埃隆·马斯克的冒险人生》"
 subtitle: "读书笔记"
 date: 2021-06-26 14:00:00
 author: "mental2008"
@@ -10,6 +10,7 @@ catalog: true
 # no-catalog: true
 tags:
     - 读书笔记
+    - 人物传记
 ---
 
 > 今年年初看完的书，当时写了点简单的读书笔记放到了 OneNote 上，顺便转载到个人博客上。
