--- a/_drafts/2023-09-27-zotero.md
+++ b/_drafts/2023-09-27-zotero.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Zotero is all you need for reference management"
-subtitle: "文献管理神器"
+title: "Zotero：超越文献管理的科研神器"
+subtitle: "如何使用 Zotero 来提升你的研究效率：一篇全面的指南"
 date: 2023-09-27
 author: "mental2008"
 # header-img: "img/post-bg-2018.jpg"
