--- a/_posts/2019-05-19-training.md
+++ b/_posts/2019-05-19-training.md
@@ -20,7 +20,7 @@ tags:
 - 有机会还是希望能再重回 icpc 的舞台吧
 - 该启程前往下一个终点了
 
-## Online
+## Onsite
 
 | Name | Solved | Rank | A | B | C | D | E | F | G | H | I | J | K | L | M |
 | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: | :-------: |
@@ -82,6 +82,7 @@ Comment:
 ## Skills
 
 #### 基本算法
+
 - 构造 √
 - 枚举 √
 - 模拟 √
@@ -90,6 +91,7 @@ Comment:
 - 递归 √
 
 #### 搜索
+
 - DFS √
 - BFS √
 - 双向搜索
@@ -97,6 +99,7 @@ Comment:
 - 启发式搜索 √
 
 #### 动态规划
+
 - 背包问题
     - 01背包 √
     - 多重背包 √
@@ -114,6 +117,7 @@ Comment:
     - 数据结构优化 √
 
 #### 图论
+
 - 最短路
     - Dijkstra算法 √
     - Bellman-Ford算法 √
@@ -136,6 +140,7 @@ Comment:
 - 欧拉图与哈密顿图
 
 #### 数据结构
+
 - 基础数据结构
     - 向量 √
     - 栈 √
@@ -170,6 +175,7 @@ Comment:
     - LCT
 
 #### 数论
+
 - 模运算
     - 同余 √
     - 快速幂 √
@@ -193,6 +199,7 @@ Comment:
 - 偏序关系
 
 #### 组合数学
+
 - 排列
     - 不可重排列 √
     - 可重排列 √
@@ -232,6 +239,7 @@ Comment:
     - 多项式求逆
 
 #### 字符串
+
 - manacher算法 √
 - 字符串Hash √
 - KMP算法
@@ -248,12 +256,14 @@ Comment:
 - 回文树
 
 #### 其他算法与技巧
+
 - 分块算法 √
 - 莫队算法 √
 - CDQ分治
 - 尺取法 √
 
-#### 计算几何(板子在手，天下我有2333)
+#### 计算几何（板子在手，天下我有 2333）
+
 - 误差处理 √
 - 点与向量
     - 点与向量的表示 √
